--- a/src/style.css
+++ b/src/style.css
@@ -401,19 +401,25 @@ button:focus {
 /* --------- */
 /* Footer */
 /* --------- */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 .footer {
   background-color: rgb(10, 4, 22);
   bottom: 0 !important;
   padding-top: 10px !important;
   padding-bottom: 8px !important ;
+  font: 'Montserrat' !important;
 }
 .footer-copywright {
   text-align: center !important;
+  font-family: 'Montserrat' !important;
+  font-size: 1.2rem;
 }
 
 .footer-body {
   z-index: 1;
   text-align: center !important;
+  font-family: 'Montserrat' !important;
+  font-size: 1rem;
 }
 
 @media (max-width: 767px) {
